fixed z-index of elements and positioning of map

--- a/assets/main.css
+++ b/assets/main.css
@@ -27,9 +27,9 @@ h2 {
   width: 100vw;
   max-width: 100%;
   overflow-x: hidden;
-  /* z-index: 10; */
-  /* transform: translateX(-22px) translateY(-22px); */
-  transform: scale(3);/* chequear q path es cual */
+  position: absolute;
+  z-index: 1;
+  transform: scale(4) translate(70px, 100px);/* chequear q path es cual */
   /* animation: zoom-out 2s linear; */
   transition: transform 1s ease-out;
 }
@@ -40,6 +40,7 @@ h2 {
 .map img {
  width:100%;
  height: 100%;
+ position: absolute;
 }
 .beacon {
   position: absolute;
@@ -48,7 +49,7 @@ h2 {
   left:50vw;
   height: 5%;
   width: 5%;
-  z-index: 0;
+  z-index: 2;
 }
 
 header {
@@ -61,12 +62,14 @@ header {
   max-width: 740px;
   margin: 4em auto;
   width: 80%;
+  position: absolute;
   opacity: 0;
-  z-index: 1;
+  z-index: 3;
 }
 
 header.is-visible {
   opacity: 1;
+  z-index: 3;
 }
 
 .test.is-visible {
@@ -89,6 +92,7 @@ header.is-visible {
   position: absolute;
     top: calc(50% - 25px);
     left: 0%;
+    z-index: 3;
 }
 .sat {
   animation: spin 10s linear infinite;
